--- a/index.html
+++ b/index.html
@@ -61,6 +61,84 @@
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://bloxfruitsitems.com/" />
+    <link rel="canonical" href="https://bloxfruitsitems.com/" />
+<link rel="canonical" href="https://bloxfruitsitems.com/calculator" />
+<link rel="canonical" href="https://bloxfruitsitems.com/values/common" />
+<link rel="canonical" href="https://bloxfruitsitems.com/values/uncommon" />
+<link rel="canonical" href="https://bloxfruitsitems.com/values/rare" />
+<link rel="canonical" href="https://bloxfruitsitems.com/values/legendary" />
+<link rel="canonical" href="https://bloxfruitsitems.com/values/mythical" />
+<link rel="canonical" href="https://bloxfruitsitems.com/values/limited" />
+<link rel="canonical" href="https://bloxfruitsitems.com/guide" />
+<link rel="canonical" href="https://bloxfruitsitems.com/login" />
+<link rel="canonical" href="https://bloxfruitsitems.com/register" />
+<link rel="canonical" href="https://bloxfruitsitems.com/forgot-password" />
+<link rel="canonical" href="https://bloxfruitsitems.com/donate" />
+<link rel="canonical" href="https://bloxfruitsitems.com/search?query=blox+fruit+value" />
+<link rel="canonical" href="https://bloxfruitsitems.com/search?query=blox+fruit+values" />
+<link rel="canonical" href="https://bloxfruitsitems.com/search?query=blox+fruits+values" />
+<link rel="canonical" href="https://bloxfruitsitems.com/search?query=value+blox+fruit" />
+<link rel="canonical" href="https://bloxfruitsitems.com/search?query=blox+fruits+value" />
+<link rel="canonical" href="https://bloxfruitsitems.com/search?query=value+blox+fruits" />
+<link rel="canonical" href="https://bloxfruitsitems.com/search?query=blox+fruits+value+list" />
+<link rel="canonical" href="https://bloxfruitsitems.com/search?query=bloxfruit+value" />
+<link rel="canonical" href="https://bloxfruitsitems.com/search?query=blox+fruit+balue" />
+<link rel="canonical" href="https://bloxfruitsitems.com/search?query=blox+fruit+value+list" />
+<link rel="canonical" href="https://bloxfruitsitems.com/bloxfruits-codes" />
+<link rel="canonical" href="https://bloxfruitsitems.com/bloxfruits-stock" />
+<link rel="canonical" href="https://bloxfruitsitems.com/roblox" />
+<link rel="canonical" href="https://bloxfruitsitems.com/bloxfruits-value" />
+<link rel="canonical" href="https://bloxfruitsitems.com/bloxfruits-values" />
+<link rel="canonical" href="https://bloxfruitsitems.com/bloxfruits-code" />
+<link rel="canonical" href="https://bloxfruitsitems.com/bloxfruits-wiki" />
+<link rel="canonical" href="https://bloxfruitsitems.com/blox-fruits-codes" />
+<link rel="canonical" href="https://bloxfruitsitems.com/bloxfruits-discord" />
+<link rel="canonical" href="https://bloxfruitsitems.com/codes-for-bloxfruits" />
+<link rel="canonical" href="https://bloxfruitsitems.com/bloxfruits-scripts" />
+<link rel="canonical" href="https://bloxfruitsitems.com/bloxfruits-calculator" />
+<link rel="canonical" href="https://bloxfruitsitems.com/blox-fruits-script" />
+<link rel="canonical" href="https://bloxfruitsitems.com/blox-fruits-values" />
+<link rel="canonical" href="https://bloxfruitsitems.com/blox-fruit-codes" />
+<link rel="canonical" href="https://bloxfruitsitems.com/blox-fruits-stock" />
+<link rel="canonical" href="https://bloxfruitsitems.com/bloxfruits-trading" />
+<link rel="canonical" href="https://bloxfruitsitems.com/blox-fruits-value-list" />
+<link rel="canonical" href="https://bloxfruitsitems.com/blox-fruits-stock-update" />
+<link rel="canonical" href="https://bloxfruitsitems.com/blox-fruits-trading-tips" />
+<link rel="canonical" href="https://bloxfruitsitems.com/blox-fruits-rarity-rankings" />
+<link rel="canonical" href="https://bloxfruitsitems.com/blox-fruits-stock-dealers" />
+<link rel="canonical" href="https://bloxfruitsitems.com/blox-fruits-value-calculator" />
+<link rel="canonical" href="https://bloxfruitsitems.com/blox-fruits-stock-news" />
+<link rel="canonical" href="https://bloxfruitsitems.com/blox-fruits-stock-chart" />
+<link rel="canonical" href="https://bloxfruitsitems.com/blox-fruits-trade-market" />
+<link rel="canonical" href="https://bloxfruitsitems.com/blox-fruits-stock-reset-timer" />
+<link rel="canonical" href="https://bloxfruitsitems.com/trade-market" />
+<link rel="canonical" href="https://bloxfruitsitems.com/stock-reset-timer" />
+<link rel="canonical" href="https://bloxfruitsitems.com/value-list" />
+<link rel="canonical" href="https://bloxfruitsitems.com/rarity-rankings" />
+<link rel="canonical" href="https://bloxfruitsitems.com/codes" />
+<link rel="canonical" href="https://bloxfruitsitems.com/roblox-codes" />
+<link rel="canonical" href="https://bloxfruitsitems.com/roblox-script" />
+<link rel="canonical" href="https://bloxfruitsitems.com/blox-fruit" />
+<link rel="canonical" href="https://bloxfruitsitems.com/script" />
+<link rel="canonical" href="https://bloxfruitsitems.com/executor" />
+<link rel="canonical" href="https://bloxfruitsitems.com/download" />
+<link rel="canonical" href="https://bloxfruitsitems.com/hacks" />
+<link rel="canonical" href="https://bloxfruitsitems.com/wiki" />
+<link rel="canonical" href="https://bloxfruitsitems.com/stock-websites" />
+<link rel="canonical" href="https://bloxfruitsitems.com/stock-tracking" />
+<link rel="canonical" href="https://bloxfruitsitems.com/real-time-stock" />
+<link rel="canonical" href="https://bloxfruitsitems.com/stock-update" />
+<link rel="canonical" href="https://bloxfruitsitems.com/trading-values" />
+<link rel="canonical" href="https://bloxfruitsitems.com/stock-reset" />
+<link rel="canonical" href="https://bloxfruitsitems.com/best-trading-sites" />
+<link rel="canonical" href="https://bloxfruitsitems.com/fruit-values" />
+<link rel="canonical" href="https://bloxfruitsitems.com/value-calculator" />
+<link rel="canonical" href="https://bloxfruitsitems.com/stock-news" />
+<link rel="canonical" href="https://bloxfruitsitems.com/stock-chart" />
+<link rel="canonical" href="https://bloxfruitsitems.com/trading-tips" />
+<link rel="canonical" href="https://bloxfruitsitems.com/stock-dealers" />
+<link rel="canonical" href="https://bloxfruitsitems.com/stock-trends" />
+<link rel="canonical" href="https://bloxfruitsitems.com/best-stock-tracking-sites" />
 
     <!-- Inline CSS -->
     <!-- AdSense Script (async for performance) -->
