--- a/index.html
+++ b/index.html
@@ -16,358 +16,7 @@
     <meta name="author" content="Blox Fruits Items" />
     <meta name="robots" content="index, follow" />
 
-    <meta name='keywords' content="blox fruit,blox fruits values,blox fruits update,Blox Fruits, Blox Fruits values, Blox Fruits trading, Blox Fruits stock, Blox Fruits trading values, Blox Fruits value calculator, Blox Fruits stock reset, Blox Fruits rarity rankings, Blox Fruits trading tips, Blox Fruits stock update, Blox Fruits value list, Roblox, blox fruits codes, blox fruits wiki, blox fruits discord, blox fruits tier list, blox fruits stock 2024, blox fruits trading websites
-roblox blox fruits,
-blox fruit trading values,
-blox fruit trade values,
-blox fruit s,
-trading value,
-blox fruits trading,
-blox fruit trading,
-blox fruit calculator,
-value trades,
-blox fruits trading values,
-blox fruit trade calculator,
-fruit blox,
-blox fruits fruits,
-blox trade,
-trade value blox fruit,
-trading values blox fruits,
-trading value blox fruits,
-trade value blox fruits,
-trading value blox fruit,
-trading values blox fruit,
-blox fruit values list,
-blox fruits value list,
-all blox fruits,
-all fruits in blox fruits,
-fruit value,
-blox fruit store,
-blox fruits new update,
-trading blox fruits,
-values blox fruit,
-value blox fruits,
-value blox fruit,
-valuable blox fruit,
-best blox fruits,
-trade blox fruit,
-trader blox fruits,
-blox fruits website,
-in blox fruit,
-blox fruits all fruits,
-blox fruit fruits,
-best fruit in blox fruits,
-blox fruits value trading,
-blox fruit value trade,
-blox fruit value trading,
-blox fruit values trade,
-new blox fruit update,
-fruits blox fruits,
-every fruit in blox fruits,
-roblox value,
-blox fruits fruit values,
-blox fruit fruit values,
-blox fruit fruit value,
-blox fruit prices,
-blox fruits trade value list,
-blox fruit trade value list,
-blox fruits trading value list,
-fruit value blox fruits,
-bloxfruits fruits,
-blox fruit dealer,
-every blox fruit,
-all fruit value blox fruit,
-blox fruit list,
-all the fruit in blox fruit,
-permanent fruits,
-permanent fruit,
-blox fruit worth,
-blox fruit site,
-fruits in blox fruits,
-bloxfruits trading,
-trading blox fruits value,
-trade in blox fruits,
-blox fruits trader,
-blox fruit trader,
-fruit blox fruits,
-all the blox fruits,
-roblox trade value,
-all blox fruits fruits,
-perm fruit blox fruit,
-permanent fruit blox fruit,
-new blox fruits,
-value list blox fruit,
-value list blox fruits,
-blox fruits trading guide,
-blox fruits blox fruits,
-all fruit blox fruit,
-value of blox fruits,
-value of blox fruit,
-blox fruit all fruits,
-blox fruit perm fruit,
-blox f,
-blox fruits permanent fruit,
-new fruits in blox fruits,
-blox fruit trade tier list,
-blox fruits trading tier list,
-blox fruits market,
-blox fruits chart,
-fruit from blox fruit,
-blox fruits permanent,
-blox fruit perm,
-trade blox fruit value,
-trading value in blox fruit,
-trading fruits,
-blox fruits fruits list,
-all blox fruit fruits,
-blox fruit in roblox,
-all perm fruit prices,
-values of fruits in blox fruits,
-fruit values in blox fruits,
-value trade blox fruit,
-fruits value blox fruits,
-fruit value blox fruit,
-fruit values blox fruit,
-roblox blox fruit value,
-value of fruits in blox fruits,
-trading fruit in blox fruit,
-blox fruit cost,
-blox fruits fruit list,
-the blox fruit,
-new fruits blox fruits,
-blox fruits new,
-blox fruits every fruit,
-permanent fruit blox fruits,
-value in blox fruit,
-blox fruit trade guide,
-blox fruit fruit prices,
-blox fruits fruit prices,
-trading guide blox fruits,
-blox fruits how to trade,
-roblox blox fruits fruits,
-roblox blox fruits all fruits,
-best blox fruit fruit,
-blox fruit value tier list,
-blox fruits value tier list,
-blox fruits trading chart,
-trade for blox fruit,
-fruit prices blox fruits,
-blox fruit robux prices,
-all fruits in blox fruit,
-every fruit in blox fruit,
-blox fruits permanent fruit prices,
-good blox fruits,
-best blox fruits fruit,
-blox fruit trading com,
-blox fruits trading list,
-blox fruit fruits value,
-roblox blox fruits trade,
-all blox fruit prices,
-blox fruits trading system,
-list of fruit in blox fruit,
-blox fruit l,
-blox fruit w,
-all perm fruits in blox fruits,
-fruit in blox fruits,
-fruits blox fruit,
-blox fruit fruit trading value,
-fruit worth blox fruits,
-blox fruit fruit trade value,
-value fruits blox fruits,
-blox fruits fruit trade value,
-blox fruits trade list,
-value fruit blox fruit,
-value blox fruit trade,
-blox fruit trade list,
-fruit trader,
-roblox blox fruits trading,
-blox fruit trading system,
-fruits list blox fruits,
-value roblox,
-blox fruits fruit dealer,
-blox fruits physical fruits,
-fruits in blox fruit,
-physical fruits in blox fruits,
-roblox blox fruit fruits,
-blox fruit where to find fruit,
-blox fruits best,
-roblox value list,
-blox fruits trading prices,
-blox fruits fruit worth,
-cosmic value blox fruit,
-blox fruits valuable,
-wfl blox fruits,
-blox fruit a,
-for blox fruit,
-blox fruit b,
-all blox fruits in blox fruits,
-blox fruits blox fruit dealer,
-all new fruits in blox fruits,
-all physical fruits in blox fruits,
-blox blox fruit,
-roblox blox fruits best fruit,
-trade com blox fruit,
-roblox blox fruit value list,
-blox fruit trading worth,
-blox fruits fruit value list,
-all blox fruit value,
-trade fruits blox fruits,
-roblox trade blox fruits,
-blox fruits wfl,
-trading site blox fruits,
-trading system blox fruits,
-blox fruits good trades,
-blox fruits blox,
-blox fruit good trades,
-blox fruits fruits cost,
-best trade in blox fruit,
-blox fruits all fruit,
-blox fruit how,
-all new blox fruits,
-all blox,
-trading perm fruits blox fruits,
-blox fruits perm fruit prices,
-blox fruit blox fruits,
-physical blox fruit,
-blox fruit value list trading,
-fruit value list,
-blox fruit value list trade,
-blox fruits value list trading,
-value list for blox fruits,
-fruit value in blox fruit,
-blox fruit all fruit value,
-value fruit in blox fruit,
-trade guide blox fruits,
-trading roblox blox fruit,
-trade roblox blox fruits,
-fruit trading blox fruits,
-blox fruits fruit trading,
-blox fruit fruits prices,
-blox fruits all fruits prices,
-blox fruit where to trade,
-good trades blox fruits,
-blox fruit gamepass value,
-blox fruit what,
-blox fruit page,
-roblox blox fruits fruit
-all fruit on blox fruit
-blox fruits fruit value trading,
-fruits worth blox fruits,
-blox fruit fruits worth,
-blox fruits all fruits trading value,
-fruit value list blox fruit,
-value list blox fruits trading,
-all fruit value in blox fruit,
-blox fruit value fruit,
-blox fruit fruits trade value,
-blox fruit fruits value list,
-all fruit value blox fruits,
-all fruits value in blox fruits,
-blox fruit valuable,
-all value fruit in blox fruit,
-all value of fruit in blox fruit,
-trade blox fruit site,
-blox fruit fruit trade,
-prices of fruits in blox fruits,
-fruit trade blox fruit,
-blox fruits rate,
-valuable blox fruits,
-blox fruit price of fruits,
-fruit prices blox fruit,
-price of fruits in blox fruits,
-blox fruit wfl,
-all prices of blox fruits,
-blox fruits all prices,
-price fruits blox fruits,
-all valuable in blox fruit,
-blox fruit all prices,
-blox fruits price fruits,
-trade fruit blox fruits,
-blox fruit trade fruit,
-trade tier list blox fruits,
-blox fruit rates,
-price of fruit in blox fruit,
-all fruit in blox fruit price,
-blox fruit fruit price list,
-price blox fruit,
-roblox blox fruit prices,
-blox fruit fruit rate,
-fruit blox fruit price,
-blox fruit trade offer,
-rate blox fruit,
-tier list trade blox fruit,
-cost of fruits in blox fruits,
-all fruit prices in blox fruits,
-site blox fruit,
-blox fruits all fruit prices,
-blox fruit valuable items,
-blox fruits valuable items,
-blox fruit valuables,
-all price fruit in blox fruit,
-all fruit price in blox fruit,
-rate blox fruits,
-all blox fruit robux prices,
-fruits cost blox fruits,
-all valuable items in blox fruits,
-valuables blox fruits,
-blox fruit every fruit price,
-values trades,
-blox fruit all fruits price,
-website blox fruit,
-blox fruit food,
-all blox fruit cost,
-all fruit cost in blox fruit,
-on blox fruit,
-best trade blox fruit,
-blox fruits all fruits cost,
-list blox fruits,
-cost blox fruits,
-best trading fruits in blox fruits,
-fruit blox fruit list,
-real fruits blox fruits,
-fruit list in blox fruit,
-all fruit in blox fruit name,
-blox fruit fruit name,
-all fruits name in blox fruits,
-real fruit blox fruits,
-no blox fruit,
-blox fruit fruits cost,
-mga fruit sa blox fruit,
-about blox fruit,
-come blox fruit,
-all fruit blox,
-permanent fruit blox fruit price,
-blox fruit name fruit,
-roblox blox fruit list,
-list fruit blox fruit,
-blox fruit come,
-fruits on blox fruit,
-roblox blox fruit all fruits,
-fruit sa blox fruit,
-roblox blox fruit dealer,
-blox fruit pp,
-all name fruit in blox fruit,
-sa blox fruit,
-blox fruit trading place,
-roblox fruit blox fruit,
-fruit permanent blox fruit,
-blox fruits all physical fruits,
-best cheap blox fruits,
-blox fruit fruit robux price,
-blox fruit all fruit picture,
-roblox blox fruits permanent fruit,
-blox fruit blox fruit dealer,
-trading area blox fruits,
-blox fruit what is the best fruit,
-info blox fruit,
-new in blox fruit,
-best fruit blox,
-blox fruit the best fruit,
-link blox fruits,
-fruit blox fruit roblox,
-fruit roblox blox fruit,
-blox fruit fruits name,
-best fruit list in blox fruits"/>
+    <meta name='keywords' content="blox fruit,blox fruits values,blox fruits update,Blox Fruits, Blox Fruits values, Blox Fruits trading, Blox Fruits stock, Blox Fruits trading values, Blox Fruits value calculator, Blox Fruits stock reset, Blox Fruits rarity rankings, Blox Fruits trading tips, Blox Fruits stock update, Blox Fruits value list, Roblox, blox fruits codes, blox fruits wiki, blox fruits discord, blox fruits tier list, blox fruits stock 2024, blox fruits trading websites"/>
     <meta name="keywords" content="Blox Fruits stock, bloxfruits fruits,bloxfruits codes,bloxfruits stock,roblox,bloxfruits value,bloxfruits values,bloxfruits code,bloxfruits wiki,blox fruits codes,bloxfruits discord,codes for bloxfruits,discord,bloxfruits scripts,bloxfruits calculator,blox fruits script,blox fruits values,blox fruit codes,blox fruits stock,redz hub script,blox fruits wiki,bloxfruits trading,bfv,blox fruits values,blox fruits codes,codes for bloxfruits,roblox blox fruits,blox fruits,blox fruits values,blox fruits codes,blox fruits stock,blox fruits trading values,blox fruits value calculator,blox fruits stock reset,blox fruits trading tips,blox fruits stock update,blox fruits stock reset timer,blox fruits value list,blox fruits rarity rankings,blox fruits stock news,blox fruits stock chart,blox fruits trading tips,blox fruits stock dealers,blox fruits stock trends,best Blox Fruits trading sites,Blox Fruits fruit values,Blox Fruits value calculator,Blox Fruits trade market,Blox Fruits stock reset timer,Blox Fruits value list,Blox Fruits rarity rankings,bloxfruits codes,roblox codes,roblox script,blox fruit,bloxfruits script,bloxfruits code,roblox executor,blox fruits script,roblox download,bloxfruits scripts,roblox scripts,bloxfruit,blox fruits codes,delta,bloxfruits hacks,bloxfruits trade,discord,codes for bloxfruits,bloxfruits discord,roblox hacks,bloxfruits wiki,bloxfruits value,RISING,delta,bloxfruits calculator,delta executor,blox fruits hacks,bloxfruits value,blox fruits script,blox fruits scripts,roblox executor"/>   
     <!-- Author and Robots -->
     <meta name="author" content="Blox Fruits Items" />
