Add useNutritionData hook for nutrition API integrationnnnmnnnn

--- a/index.html
+++ b/index.html
@@ -91,7 +91,14 @@
       }
       </script>
       
-    
+    <!-- Standard Favicon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/bloxfruits-banner.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/bloxfruits-banner.png" />
+    <!-- Apple Touch Icon (iOS) -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/bloxfruits-banner.png" />
+    <!-- Android/Manifest -->
+    <link rel="icon" type="image/png" sizes="192x192" href="/bloxfruits-banner.png" />
+
     <link rel="/bloxfruits-banner.png" type="image/png" sizes="48x48" href="/bloxfruits-banner.png" />
     <link rel="/bloxfruits-banner.png" type="image/png" sizes="64x64" href="/bloxfruits-banner.png" />
     <link rel="/bloxfruits-banner.png" sizes="32x32" href="/bloxfruits-banner.png" />
