--- a/index.html
+++ b/index.html
@@ -98,32 +98,32 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/bloxfruits-banner.png" />
     <!-- Android/Manifest -->
     <link rel="icon" type="image/png" sizes="192x192" href="/bloxfruits-banner.png" />
-
-    <link rel="/bloxfruits-banner.png" type="image/png" sizes="48x48" href="/bloxfruits-banner.png" />
-    <link rel="/bloxfruits-banner.png" type="image/png" sizes="64x64" href="/bloxfruits-banner.png" />
-    <link rel="/bloxfruits-banner.png" sizes="32x32" href="/bloxfruits-banner.png" />
-    <link rel="/bloxfruits-banner.png" sizes="72x72" href="/bloxfruits-banner.png" />
-    <link rel="/bloxfruits-banner.png" sizes="48x48" href="/bloxfruits-banner.png" />
-    <link rel="/bloxfruits-banner.png" sizes="96x96" href="/bloxfruits-banner.png" />
-    <link rel="/bloxfruits-banner.png" sizes="180x180" href="/bloxfruits-banner.png" />
-    <link rel="/bloxfruits-banner.png" sizes="192x192" href="/bloxfruits-banner.png" />
-    <link rel="/bloxfruits-banner.png" sizes="128x128" href="/bloxfruits-banner.png" />
-    <link rel="/bloxfruits-banner.png" sizes="512x512" href="/bloxfruits-banner.png" />
-    <link rel="apple-touch-icon" sizes="57x57" href="/bloxfruits-banner.png" />
-    <link rel="apple-touch-icon" sizes="60x60" href="/bloxfruits-banner.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="/bloxfruits-banner.png" />
-    <link rel="apple-touch-icon" sizes="76x76" href="/bloxfruits-banner.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="/bloxfruits-banner.png" />
-    <link rel="apple-touch-icon" sizes="120x120" href="/bloxfruits-banner.png" />
-    <link rel="apple-touch-icon" sizes="144x144" href="/bloxfruits-banner.png" />
-    <link rel="apple-touch-icon" sizes="152x152" href="/bloxfruits-banner.png" />
-    <link rel="apple-touch-icon" sizes="167x167" href="/bloxfruits-banner.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/bloxfruits-banner.png" />
-    <link rel="apple-touch-icon" sizes="192x192" href="/bloxfruits-banner.png" />
-    <link rel="apple-touch-icon" sizes="228x228" href="/bloxfruits-banner.png" />
-    <link rel="apple-touch-icon" sizes="256x256" href="/bloxfruits-banner.png" />
-    <link rel="apple-touch-icon" sizes="384x384" href="/bloxfruits-banner.png" />
-    <link rel="apple-touch-icon" sizes="512x512" href="/bloxfruits-banner.png" />
+    <!-- Favicons for desktop browsers -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/bloxfruits-banner.png" />
+    <link rel="icon" type="image/png" sizes="48x48" href="/bloxfruits-banner.png" />
+    <link rel="icon" type="image/png" sizes="64x64" href="/bloxfruits-banner.png" />
+    <link rel="icon" type="image/png" sizes="96x96" href="/bloxfruits-banner.png" />
+    <link rel="icon" type="image/png" sizes="128x128" href="/bloxfruits-banner.png" />
+    <link rel="icon" type="image/png" sizes="180x180" href="/bloxfruits-banner.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/bloxfruits-banner.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="/bloxfruits-banner.png" />
+    
+    <!-- Apple Touch Icons for iPhones/iPads -->
+    <link rel="apple-touch-icon" type="image/png" sizes="57x57" href="/bloxfruits-banner.png" />
+    <link rel="apple-touch-icon" type="image/png" sizes="60x60" href="/bloxfruits-banner.png" />
+    <link rel="apple-touch-icon" type="image/png" sizes="72x72" href="/bloxfruits-banner.png" />
+    <link rel="apple-touch-icon" type="image/png" sizes="76x76" href="/bloxfruits-banner.png" />
+    <link rel="apple-touch-icon" type="image/png" sizes="114x114" href="/bloxfruits-banner.png" />
+    <link rel="apple-touch-icon" type="image/png" sizes="120x120" href="/bloxfruits-banner.png" />
+    <link rel="apple-touch-icon" type="image/png" sizes="144x144" href="/bloxfruits-banner.png" />
+    <link rel="apple-touch-icon" type="image/png" sizes="152x152" href="/bloxfruits-banner.png" />
+    <link rel="apple-touch-icon" type="image/png" sizes="167x167" href="/bloxfruits-banner.png" />
+    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="/bloxfruits-banner.png" />
+    <link rel="apple-touch-icon" type="image/png" sizes="192x192" href="/bloxfruits-banner.png" />
+    <link rel="apple-touch-icon" type="image/png" sizes="228x228" href="/bloxfruits-banner.png" />
+    <link rel="apple-touch-icon" type="image/png" sizes="256x256" href="/bloxfruits-banner.png" />
+    <link rel="apple-touch-icon" type="image/png" sizes="384x384" href="/bloxfruits-banner.png" />
+    <link rel="apple-touch-icon" type="image/png" sizes="512x512" href="/bloxfruits-banner.png" />
 
   </head>
   <body>
